04-istio/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  subset:
    - name: v1 
      labels:
        version: A
    - name: v2 
      labels: 
        version: B
