04-istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService 
metadata:
  name: nginx-vs 
spec:
  hosts:
  - nginx-service
  http:
    - route:
        - destination:
            host: nginx-service
            subset: v1
          weigth: 90
        - destination:
            host: nginx-service
            subset: v2
          weigth: 10
